--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -9,9 +9,9 @@
     <script type="text/javascript">
      var map;
 function initialize() {
-  var myLatlng = new google.maps.LatLng(-25.363882,131.044922);
+  var myLatlng = new google.maps.LatLng(42.35331950534246, -71.06745113502257);
   var mapOptions = {
-    zoom: 4,
+    zoom: 16,
     center: myLatlng,
     mapTypeId: google.maps.MapTypeId.ROADMAP
   }
