--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -8,29 +8,34 @@
     </script>
     <script type="text/javascript">
      var map;
-function initialize() {
-  var myLatlng = new google.maps.LatLng(42.35331950534246, -71.06745113502257);
-  var mapOptions = {
-    zoom: 16,
-    center: myLatlng,
-    mapTypeId: google.maps.MapTypeId.ROADMAP
-  }
-  map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
+      var this_location;
+      function initialize() {
+      var myLatlng = new google.maps.LatLng(42.35331950534246, -71.06745113502257);
+      var mapOptions = {
+      zoom: 16,
+      center: myLatlng,
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+      }
+  
+      map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
 
-  google.maps.event.addListener(map, 'dblclick', function(event) {
-    placeMarker(event.latLng);
-    alert(event.latLng)
-  });
-}
+      google.maps.event.addListener(map, 'dblclick', function(event) {
+      
+       placeMarker(event.latLng);
+        this_location = event.latLng.toString();
+        console.log(this_location)
 
-function placeMarker(location) {
-  var marker = new google.maps.Marker({
+      });
+    }
+
+  function placeMarker(location) {
+    var marker = new google.maps.Marker({
       position: location,
       map: map
-  });
+    });
 
   map.setCenter(location);
-}
+  }
       google.maps.event.addDomListener(window, 'load', initialize);
     </script>
 <div style='float:right; width:500px; height:500px; margin-right:20px;'>
