--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,14 +1,24 @@
 <style type="text/css">
       html { height: 100% }
       body { height: 100%; margin: 0; padding: 0 }
-      #map-canvas { height: 100% }
-    </style>
-    <script type="text/javascript"
+      #map-canvas { height: 65%; width:100%; position:absolute;
+        top:12.5%;
+      }
+    p{
+      float:left;
+    }
+      input{
+    
+      }
+</style>
+    
+<script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbqyE_ATNzMEVS_S-79LoBo6peBwoVa-o&sensor=false">
-    </script>
-    <script type="text/javascript">
-     var map;
-      var this_location;
+</script>
+  <script type="text/javascript">
+      var map;
+      var this_location =[];
+      markers_array=[]
       function initialize() {
       var myLatlng = new google.maps.LatLng(42.35331950534246, -71.06745113502257);
       var mapOptions = {
@@ -22,26 +32,45 @@
       google.maps.event.addListener(map, 'dblclick', function(event) {
       
        placeMarker(event.latLng);
-        this_location = event.latLng.toString();
-        console.log(this_location)
+       this_location = event.latLng.toString().replace(/"/g, "").replace(/'/g, "").replace(/\(|\)/g, "").split(',');
+   
+
+        document.getElementById("post_longitude").value = this_location[0];
+        document.getElementById("post_latitude").value = this_location[1];
+
 
       });
     }
 
-  function placeMarker(location) {
+    function placeMarker(location) {
+    clearOverlays();
     var marker = new google.maps.Marker({
       position: location,
       map: map
     });
-
-  map.setCenter(location);
+    markers_array.push(marker)
   }
-      google.maps.event.addDomListener(window, 'load', initialize);
-    </script>
-<div style='float:right; width:500px; height:500px; margin-right:20px;'>
-  <div id="map-canvas"/></div>
+
+  function clearOverlays() {
+  if (markers_array) {
+    for (i in markers_array) {
+      markers_array[i].setMap(null);
+    }
+  }
+}
+
+
+
+google.maps.event.addDomListener(window, 'load', initialize);
+
+
+
+</script>
+
+
+<div id="map-canvas"/></div>
 </div>
-<%= form_for :post, url: posts_path do |f| %>
+  <%= form_for :post, url: posts_path do |f| %>
   <p>
     <%= f.label :report_title %><br>
     <%= f.text_field :report_title %>
