--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,54 +1,102 @@
-<style type="text/css">
-      html { height: 100% }
-      body { height: 100%; margin: 0; padding: 0 }
-      #map-canvas { height: 65%; width:100%; position:absolute;
-        top:12.5%;
-      }
-    p{
-      float:left;
-    }
-      input{
     
-      }
-</style>
-    
+
+
+<div id="map-canvas"/></div>
+
+
+<div class='form_instructions'>
+
+  <div id="panel" class='step step_1 active'>
+      <input id="address" type="textbox" value="Boston">
+      <input type="button" id='step_1' class='push_button' data-role='none'value="Plot General Location" onclick="codeAddress()">
+      <div style='clear:both'></div>
+  </div>  
+
+  <%= form_for :post, url: posts_path do |f| %>
+  <div class='step step_2'>
+    <%= f.label :report_title %>
+    <%= f.text_field :report_title %>
+
+    <%= f.label :description %>
+    <%= f.text_area :description %>
+  </div>
+
+   <div class='step step_3'>
+      <%= f.label :location %><br>
+      <%= f.text_area :location %>
+      <div class="latLong">
+        <%= f.text_area :latitude %>
+        <%= f.text_area :longitude %>
+      </div>
+  </div>
+  <div class="step step_4">
+    <%= check_box_tag(:community_issue) %>
+    <%= label_tag(:community_issue, "Is this a community issue?") %>
+    <%= check_box_tag(:general_issue) %>
+    <%= label_tag(:general_issue, "Is this a more general report?") %>
+    <%= check_box_tag(:fun_issue) %>
+    <%= label_tag(:fun_issue, "Is this report just for fun?") %>
+  </div>
+
+
+  <div class="step step_5 submit">
+    <%= f.submit %>
+ </div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbqyE_ATNzMEVS_S-79LoBo6peBwoVa-o&sensor=false">
 </script>
-  <script type="text/javascript">
-      var map;
-      var this_location =[];
-      markers_array=[]
-      function initialize() {
-      var myLatlng = new google.maps.LatLng(42.35331950534246, -71.06745113502257);
-      var mapOptions = {
-      zoom: 16,
-      center: myLatlng,
-      mapTypeId: google.maps.MapTypeId.ROADMAP
-      }
-  
-      map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
+<script type="text/javascript">
+   
+var geocoder;
+var map;
+var this_location =[];
+var markers_array=[];
 
-      google.maps.event.addListener(map, 'dblclick', function(event) {
+function initialize() {
+  geocoder = new google.maps.Geocoder();
+  var latlng = new google.maps.LatLng(42.35619718606788, -71.06025695800781);
+  var mapOptions = {
+    zoom: 16,
+    center: latlng,
+    mapTypeId: google.maps.MapTypeId.ROADMAP
+  }
+  map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+
+ google.maps.event.addListener(map, 'dblclick', function(event) {
       
        placeMarker(event.latLng);
        this_location = event.latLng.toString().replace(/"/g, "").replace(/'/g, "").replace(/\(|\)/g, "").split(',');
-   
 
         document.getElementById("post_longitude").value = this_location[0];
         document.getElementById("post_latitude").value = this_location[1];
 
 
       });
-    }
+}
 
-    function placeMarker(location) {
+  function placeMarker(location) {
     clearOverlays();
     var marker = new google.maps.Marker({
       position: location,
       map: map
     });
     markers_array.push(marker)
+   
   }
 
   function clearOverlays() {
@@ -60,48 +108,30 @@
 }
 
 
+function codeAddress() {
+  var address = document.getElementById('address').value;
+  geocoder.geocode( { 'address': address}, function(results, status) {
+    if (status == google.maps.GeocoderStatus.OK) {
+      map.setCenter(results[0].geometry.location);
+        document.getElementById("post_longitude").value = this_location[0];
+        document.getElementById("post_latitude").value = this_location[1];
+
+    } else {
+      alert('Geocode was not successful for the following reason: ' + status);
+    }
+
+  });
+ 
+}
 
 google.maps.event.addDomListener(window, 'load', initialize);
 
+$(document).ready(function() {
+  $('#step_1').click(function(){
+   $('.step_2').addClass('active');
+   });
+});
 
-
-</script>
-
-
-<div id="map-canvas"/></div>
-</div>
-  <%= form_for :post, url: posts_path do |f| %>
-  <p>
-    <%= f.label :report_title %><br>
-    <%= f.text_field :report_title %>
-  </p>
  
-  <p>
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
-  </p>
-
-   <p>
-    <%= f.label :location %><br>
-    <%= f.text_area :location %>
-  </p>
-<p>
-    <%= f.label :latitude %><br>
-    <%= f.text_area :latitude %>
-   </p>
-    <p>
-    <%= f.label :longitude %><br>
-    <%= f.text_area :longitude %>
-</p>
-<%= check_box_tag(:community_issue) %>
-<%= label_tag(:community_issue, "Is this a community issue?") %>
-<%= check_box_tag(:general_issue) %>
-<%= label_tag(:general_issue, "Is this a more general report?") %>
-<%= check_box_tag(:fun_issue) %>
-<%= label_tag(:fun_issue, "Is this report just for fun?") %>
-
-
-  <p>
-    <%= f.submit %>
-  </p>
+</script>
 <% end %>
