--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -19,14 +19,16 @@
 
     <%= f.label :description %>
     <%= f.text_area :description %>
+    
+    <input type="button" id='step_2' class='push_button' data-role='none'value="next" onclick="">
   </div>
 
    <div class='step step_3'>
-      <%= f.label :location %><br>
-      <%= f.text_area :location %>
+      <p>Double Click To Drop A Pin</p>
+   
       <div class="latLong">
-        <%= f.text_area :latitude %>
-        <%= f.text_area :longitude %>
+        <%= f.hidden_field :latitude %>
+        <%= f.hidden_field :longitude %>
       </div>
   </div>
   <div class="step step_4">
@@ -107,7 +109,6 @@ function initialize() {
   }
 }
 
-
 function codeAddress() {
   var address = document.getElementById('address').value;
   geocoder.geocode( { 'address': address}, function(results, status) {
@@ -130,6 +131,13 @@ $(document).ready(function() {
   $('#step_1').click(function(){
    $('.step_2').addClass('active');
    });
+ $('#step_2').click(function(){
+  $('.step').removeClass('active');
+  $('.step').fadeOut();
+  $('.step_3').addClass('active');
+
+   });
+
 });
 
  
