--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -34,7 +34,7 @@ $red: #B31D14;
   width:75%;
   margin:auto;
 }
-#step_2.push_button{
+#step_2.push_button, #step_3.push_button{
   float:right;
   width:20%;
   font-size:15px;
