--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -140,6 +140,7 @@ $(document).ready(function() {
   $('#step_3').click(function(){
   $('.step').removeClass('active');
   $('.step').fadeIn();
+  $('#panel, #step_2, #step_3').css('display', 'none');
   $('.step_4').addClass('active');
    });
 
