--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -15,55 +15,13 @@ $red: #B31D14;
   position:absolute;
   z-index:0
   }
-.form_instructions{
-  position:relative;
-  z-index:1;
-  background:$blue_zero;
-  border-bottom: 5px solid #131924;
-  p{color:$white; text-align:center;margin:0px; text-shadow:none;}
-  label{ color:$white; text-shadow:none;}
-  .step{display:none; width:75%; margin:auto;} 
-  .step.active{display:block;}
-  #address{float:left; width:40%; margin:5px 10px;
-    border-radius:5px; padding:10px;}
-
-
+.panel-primary {
+border-color: #428bca;
+position: absolute;
+right: 0px;
+top: 53px;
+z-index: 1;
+width: 45%;
 }
    
-#panel{
-  width:75%;
-  margin:auto;
-}
-#step_2.push_button, #step_3.push_button{
-  float:right;
-  width:20%;
-  font-size:15px;
-}
-.push_button {
-position: relative;
-width: 40%;
-color: #FFF;
-display: block;
-float: left;
-text-decoration: none;
-margin: 0 auto;
-top:5px;
-padding: 10px 5px;
-border-radius: 5px;
-border: solid 1px #D94E3B;
-background: #cb3b27;
-text-align: center;
--webkit-transition: all 0.1s;
--moz-transition: all 0.1s;
-transition: all 0.1s;
--webkit-box-shadow: 1px 3px 0px #84261a;
--moz-box-shadow: 1px 3px 0px #84261a;
-box-shadow: 1px 3px 0px #84261a;
-}
-.push_button:hover{
-    -webkit-box-shadow: 1px 2px 0px #84261a;
-    -moz-box-shadow: 1px 2px 0px #84261a;
-    box-shadow: 1px 2px 0px #84261a;
-    position:relative;
-    top:8px;
-}
+
