--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbqyE_ATNzMEVS_S-79LoBo6peBwoVa-o&sensor=false">
+</script>
+<script type="text/javascript"
+      src="javascripts/infobox.js">
+</script>
+
   <title>CommunityOrganizing</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
@@ -38,9 +45,9 @@
     </ul>
     <form class="navbar-form navbar-left" role="search">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
+        <input type="text" class="form-control" id='address'placeholder="Search">
       </div>
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button class="btn btn-default"  onclick="event.preventDefault(); codeAddress(map);">Submit</button>
     </form>
     <ul class="nav navbar-nav navbar-right">
       <li><a class='help' href="#">Help ?</a></li>
