--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,6 @@
-<script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbqyE_ATNzMEVS_S-79LoBo6peBwoVa-o&sensor=false">
-</script>
+
 <script>
- var map;
+window.map;
  var geocoder;
 function initialize() {
    geocoder = new google.maps.Geocoder();
@@ -12,14 +10,63 @@ function initialize() {
     center: myLatlng,
     mapTypeId: google.maps.MapTypeId.ROADMAP
   }
-  var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+   window.map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+
+
 <% @posts.each do |post| %>
-  new google.maps.Marker({
+
+ var marker =  new google.maps.Marker({
       position: new google.maps.LatLng(<%= post.latitude.to_f %>, <%= post.longitude.to_f %>),
         map: map,
-        title: 'Hello World!'
-  });
+        icon:'/pin.svg',
+        clickable: true,
+        title: " <%= post.report_title %> "
+      });
+
+  var labelText = " <a href='/posts/<%=post.id %>'> <%= post.report_title %> </a> ";
+  var myOptions = {
+  content: labelText
+      ,boxStyle: {
+        border: "1px solid black"
+          ,background: "white"
+          ,textAlign: "center"
+          ,fontSize: "8pt"
+          ,width: "86px"  // has to be set manually
+          ,opacity: 1.0
+          }
+      ,disableAutoPan: true
+      ,pixelOffset: new google.maps.Size(-43, -50) // set manually
+      ,position: marker.getPosition()
+      ,closeBoxURL: ""
+      ,pane: "floatPane"
+       ,enableEventPropagation: true
+      };
+
+        var ibLabel = new InfoBox(myOptions);
+        ibLabel.open(map);
+  
+
 <% end %>
+
+
+
+
+
+
+}
+function codeAddress(map) {
+  var address = document.getElementById('address').value;
+  console.log(address);
+  geocoder.geocode( { 'address': address}, function(results, status) {
+    if (status == google.maps.GeocoderStatus.OK) {
+      window.map.setCenter(results[0].geometry.location);
+
+    } else {
+      alert('Geocode was not successful for the following reason: ' + status);
+    }
+
+  });
+ 
 }
 
 google.maps.event.addDomListener(window, 'load', initialize);
